<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.dixitpatel.movieratingdemo.feature_movie_rating.domain.utils.ExtensionsKt" />

        <import type="com.dixitpatel.movieratingdemo.feature_movie_rating.domain.utils.ImageQuality" />

        <import type="com.dixitpatel.movieratingdemo.feature_movie_rating.domain.utils.SelectedMediaType" />

        <import type="com.dixitpatel.movieratingdemo.feature_movie_rating.domain.utils.SelectedIntentType" />


        <variable
            name="activity"
            type="com.dixitpatel.movieratingdemo.feature_movie_rating.presentation.ui.moviedetails.MovieDetailsActivity" />

        <variable
            name="viewModel"
            type="com.dixitpatel.movieratingdemo.feature_movie_rating.presentation.ui.moviedetails.MovieDetailsViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{@color/day_night_inverse}"
        android:orientation="vertical"
        tools:context=".presentation.ui.moviedetails.MovieDetailsActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            isVisible="@{viewModel.uiState.success}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                backgroundColor="@{@color/day_night_inverse}"
                collapsingToolbar="@{collapsingToolbarLayout}"
                frameLayout="@{frameLayout}"
                toolbarTitle="@{viewModel.details.title}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@{@color/day_night_inverse}"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_poster_height"
                    app:contentScrim="@{@color/day_night_inverse}"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                    app:titleCollapseMode="scale"
                    app:toolbarId="@id/toolbar">

                    <FrameLayout
                        android:id="@+id/frameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        app:layout_collapseMode="parallax">

                        <ImageView
                            centerCrop="@{true}"
                            imageMediaType="@{SelectedMediaType.MOVIE}"
                            imageQuality="@{ImageQuality.HIGH}"
                            imageUrl="@{viewModel.details.posterPath}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="ContentDescription"
                            tools:src="@drawable/ic_baseline_movie_24" />

                        <LinearLayout
                            style="@style/BriefDetailParent"
                            transparentBackground="@{@color/day_night_inverse}">

                            <TextView
                                style="@style/BriefDetailTitle"
                                android:text="@{viewModel.details.title}"
                                tools:text="Movie Title" />

                            <LinearLayout
                                isVisible="@{!viewModel.details.releaseDate.empty || viewModel.details.runtime != 0}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp">

                                <TextView
                                    style="@style/BriefDetailBody"
                                    android:maxLength="4"
                                    android:text="@{viewModel.details.releaseDate}"
                                    tools:text="2022" />

                                <TextView
                                    style="@style/BriefDetailBody"
                                    isVisible="@{!viewModel.details.releaseDate.empty &amp;&amp; viewModel.details.runtime != 0}"
                                    android:layout_marginStart="6dp"
                                    android:layout_marginEnd="6dp"
                                    android:text="@string/bullet_point" />

                                <TextView
                                    style="@style/BriefDetailBody"
                                    isVisible="@{viewModel.details.runtime != 0}"
                                    android:text="@{ExtensionsKt.formatTime(viewModel.details.runtime, context)}"
                                    tools:text="0hr 0min" />

                            </LinearLayout>

                            <TextView
                                style="@style/BriefDetailBody"
                                android:drawablePadding="@dimen/textview_drawable_padding"
                                android:text="@{ExtensionsKt.round(viewModel.details.voteAverage) + @string/item_count_s(ExtensionsKt.thousandsSeparator(viewModel.details.voteCount,context))}"
                                app:drawableStartCompat="@drawable/ic_baseline_star_rate_18"
                                tools:text="0.0 (0)" />

                        </LinearLayout>

                    </FrameLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        activity="@{activity}"
                        backArrowTint="@{@color/day_night_inverse}"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@{@color/day_night_inverse}"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/top_margin_large">

                    <TextView
                        android:id="@+id/summary"
                        style="@style/DetailsTitle"
                        isVisible="@{!viewModel.details.overview.empty}"
                        android:text="@string/detail_summary" />

                    <TextView
                        style="@style/DetailsBody"
                        isVisible="@{!viewModel.details.overview.empty}"
                        android:layout_marginBottom="@dimen/bottom_margin_large"
                        android:text="@{viewModel.details.overview}"
                        tools:text="Summary" />

                    <TextView
                        style="@style/DetailsTitle"
                        isVisible="@{!viewModel.details.credits.getDirector().empty}"
                        android:text="@string/detail_director" />

                    <TextView
                        style="@style/DetailsBody"
                        isVisible="@{!viewModel.details.credits.getDirector().empty}"
                        android:layout_marginBottom="@dimen/bottom_margin_large"
                        android:text="@{viewModel.details.credits.getDirector()}"
                        tools:text="Director" />

                    <TextView
                        style="@style/DetailsTitle"
                        isVisible="@{!viewModel.details.credits.getWriters().empty}"
                        android:text="@string/detail_writers" />

                    <TextView
                        style="@style/DetailsBody"
                        isVisible="@{!viewModel.details.credits.getWriters().empty}"
                        android:layout_marginBottom="@dimen/bottom_margin_large"
                        android:text="@{viewModel.details.credits.getWriters()}"
                        tools:text="Writers" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/TitleParent"
                        isVisible="@{!viewModel.details.videos.filterVideos(false).empty}">

                        <TextView
                            android:id="@+id/videos"
                            style="@style/Title"
                            android:text="@string/detail_title_trailers"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            style="@style/ListItemCount"
                            android:text="@{@string/item_count(viewModel.details.videos.filterVideos(false).size())}"
                            app:layout_constraintStart_toEndOf="@id/videos"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            style="@style/SeeAll"
                            backgroundColor="@{@color/day_night_inverse}"
                            intentType="@{SelectedIntentType.VIDEOS}"
                            isVisible="@{viewModel.details.videos.filterVideos(false).size() > 2}"
                            list="@{viewModel.details.videos.filterVideos(false)}"
                            mediaType="@{SelectedMediaType.MOVIE}"
                            title="@{@string/detail_title_trailers + @string/item_count(viewModel.details.videos.filterVideos(false).size())}"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            style="@style/ListItemCount"
                            app:layout_constraintStart_toEndOf="@id/videos"
                            tools:ignore="MissingConstraints" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvVideos"
                        style="@style/RecyclerView"
                        isVisible="@{!viewModel.details.videos.filterVideos(false).empty}"
                        android:adapter="@{activity.adapterVideos}" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/TitleParent"
                        isVisible="@{!viewModel.details.credits.cast.empty}">

                        <TextView
                            android:id="@+id/cast"
                            style="@style/Title"
                            android:text="@string/detail_title_cast"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            style="@style/ListItemCount"
                            android:text="@{@string/item_count(viewModel.details.credits.cast.size())}"
                            app:layout_constraintStart_toEndOf="@id/cast"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            style="@style/SeeAll"
                            backgroundColor="@{@color/day_night_inverse}"
                            intentType="@{SelectedIntentType.CAST}"
                            isVisible="@{viewModel.details.credits.cast.size() > 3}"
                            list="@{viewModel.details.credits.cast}"
                            mediaType="@{SelectedMediaType.MOVIE}"
                            title="@{@string/detail_title_cast + @string/item_count(viewModel.details.credits.cast.size())}"
                            tools:ignore="MissingConstraints" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCast"
                        style="@style/RecyclerView"
                        isVisible="@{!viewModel.details.credits.cast.empty}"
                        android:adapter="@{activity.adapterCast}" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:baselineAlignBottom="false"
                android:onClick="@{() -> viewModel.updateFavorites()}"
                android:src="@{viewModel.isInFavorites ? @drawable/ic_baseline_favorite_24 : @drawable/ic_baseline_favorite_border_24}"
                app:layout_anchor="@id/appBarLayout"
                app:layout_anchorGravity="end|bottom"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_baseline_favorite_border_24" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <FrameLayout
            style="@style/BackButtonParent"
            isVisible="@{viewModel.uiState.loading || viewModel.uiState.error}">

            <ImageButton
                style="@style/BackButton"
                iconTint="@{@color/day_night_inverse}"
                android:onClick="@{()->activity.onBackPressed()}"
                tools:ignore="ContentDescription" />

        </FrameLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            style="@style/Loading"
            android:layout_gravity="center"
            isVisible="@{viewModel.uiState.loading}" />

    </LinearLayout>

</layout>