<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.dixitpatel.movieratingdemo.feature_movie_rating.domain.utils.SelectedMediaType" />

        <import type="com.dixitpatel.movieratingdemo.feature_movie_rating.domain.utils.SelectedIntentType" />

        <variable
            name="fragment"
            type="com.dixitpatel.movieratingdemo.feature_movie_rating.presentation.ui.search.SearchFragment" />

        <variable
            name="viewModel"
            type="com.dixitpatel.movieratingdemo.feature_movie_rating.presentation.ui.search.SearchViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.ui.search.SearchFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ivBack"
                isVisible="@{viewModel.isSearchInitialized}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginEnd="@dimen/end_margin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="@{() -> fragment.clearSearch()}"
                android:src="?attr/homeAsUpIndicator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="16dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivBack"
                app:layout_constraintTop_toTopOf="parent">

                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:iconifiedByDefault="false"
                    android:translationY="1dp"
                    app:queryBackground="@android:color/transparent"
                    android:queryHint="@string/search_query_hint" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/linearProgressIndicator"
                style="@style/Loading"
                isVisible="@{viewModel.uiState.loading &amp;&amp; !viewModel.query.empty}"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                isVisible="@{viewModel.uiState.success &amp;&amp; !viewModel.query.empty}"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/TitleParent"
                        android:layout_marginTop="0dp">

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/TitleDayNight"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/title_movies" />

                        <TextView
                            style="@style/ListItemCount"
                            android:text="@{@string/item_count(viewModel.movieTotalResults)}"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/textView2" />

                        <TextView
                            style="@style/SeeAll"
                            intentType="@{SelectedIntentType.SEARCH}"
                            isVisible="@{viewModel.movieTotalResults > 3}"
                            mediaType="@{SelectedMediaType.MOVIE}"
                            stringId="@{viewModel.query}"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            title="@{@string/title_see_all_search(viewModel.query, viewModel.movieTotalResults)}" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvMovies"
                        style="@style/RecyclerView"
                        loadMore="@{viewModel::onLoadMore}"
                        shouldLoadMore="@{true}"
                        type="@{SelectedMediaType.MOVIE}"
                        android:adapter="@{fragment.adapterMovies}" />

                    <androidx.constraintlayout.widget.ConstraintLayout style="@style/TitleParent">

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/TitleDayNight"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/title_tv_shows" />

                        <TextView
                            style="@style/ListItemCount"
                            app:layout_constraintTop_toTopOf="parent"
                            android:text="@{@string/item_count(viewModel.tvTotalResults)}"
                            app:layout_constraintStart_toEndOf="@id/textView3" />

                        <TextView
                            style="@style/SeeAll"
                            intentType="@{SelectedIntentType.SEARCH}"
                            isVisible="@{viewModel.tvTotalResults > 3}"
                            mediaType="@{SelectedMediaType.TV}"
                            stringId="@{viewModel.query}"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            title="@{@string/title_see_all_search(viewModel.query, viewModel.tvTotalResults)}" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvTvs"
                        style="@style/RecyclerView"
                        loadMore="@{viewModel::onLoadMore}"
                        shouldLoadMore="@{true}"
                        type="@{SelectedMediaType.TV}"
                        android:adapter="@{fragment.adapterTvs}" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </FrameLayout>

    </LinearLayout>

</layout>